// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentHubArticleList /> should render base component correctly with pattern 0 1`] = `
<div>
  <section>
    <div
      class="base"
    >
      <div
        class="top-left-0 article"
      >
        <div
          class="base"
          id="4"
        >
          <div
            class="category"
          >
            Product
          </div>
          <div>
            <a
              class="base left dark title"
              data-test-ref="4_TITLE"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="4. Senorial consectetur adipiscing elit."
            >
              <h1>
                <span>
                  4. Senorial consectetur adipiscing elit.
                </span>
              </h1>
            </a>
          </div>
          <div
            class="note"
          >
            <span>
              15 minute read
            </span>
          </div>
          <a
            class="base left dark image nonMobile"
            data-test-ref="4_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="4. Senorial consectetur adipiscing elit."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <img
                  alt="horizontal_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
          <a
            class="base left dark image mobile"
            data-test-ref="4_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="4. Senorial consectetur adipiscing elit."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <img
                  alt="horizontal_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
      <div
        class="top-right-0 article"
      >
        <div
          class="base"
          id="3"
        >
          <div
            class="category"
          >
            Product
          </div>
          <div>
            <a
              class="base left dark title"
              data-test-ref="3_TITLE"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
            >
              <h1>
                <span>
                  3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante.
                </span>
              </h1>
            </a>
          </div>
          <div
            class="note"
          >
            <span>
              15 minute read
            </span>
          </div>
          <a
            class="base left dark image nonMobile"
            data-test-ref="3_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
          <a
            class="base left dark image mobile"
            data-test-ref="3_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
      <div
        class="bottom-left-0 article"
      >
        <div
          class="base"
          id="2"
        >
          <div
            class="category"
          >
            Culture
          </div>
          <div>
            <a
              class="base left dark title"
              data-test-ref="2_TITLE"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <h1>
                <span>
                  2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
                </span>
              </h1>
            </a>
          </div>
          <div
            class="note"
          >
            <span>
              15 minute read
            </span>
          </div>
          <a
            class="base left dark image nonMobile"
            data-test-ref="2_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
          <a
            class="base left dark image mobile"
            data-test-ref="2_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
      <div
        class="bottom-right-0 article"
      >
        <div
          class="base"
          id="1"
        >
          <div
            class="category"
          >
            Aesop Spotify
          </div>
          <div>
            <a
              class="base left dark title"
              data-test-ref="1_TITLE"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <h1>
                <span>
                  1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
                </span>
              </h1>
            </a>
          </div>
          <div
            class="note"
          >
            <span>
              15 minute read
            </span>
          </div>
          <a
            class="base left dark image nonMobile"
            data-test-ref="1_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <img
                  alt="horizontal_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
          <a
            class="base left dark image mobile"
            data-test-ref="1_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <img
                  alt="horizontal_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      class="mobile"
    >
      <div
        class="base"
        id="4"
      >
        <div
          class="category"
        >
          Product
        </div>
        <div>
          <a
            class="base left dark title"
            data-test-ref="4_TITLE"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="4. Senorial consectetur adipiscing elit."
          >
            <h1>
              <span>
                4. Senorial consectetur adipiscing elit.
              </span>
            </h1>
          </a>
        </div>
        <div
          class="note"
        >
          <span>
            15 minute read
          </span>
        </div>
        <a
          class="base left dark image nonMobile"
          data-test-ref="4_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers"
          target="_self"
          title="4. Senorial consectetur adipiscing elit."
        >
          <div>
            <picture
              class="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
                loading="lazy"
              />
            </picture>
          </div>
        </a>
        <a
          class="base left dark image mobile"
          data-test-ref="4_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers"
          target="_self"
          title="4. Senorial consectetur adipiscing elit."
        >
          <div>
            <picture
              class="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
                loading="lazy"
              />
            </picture>
          </div>
        </a>
      </div>
      <div
        class="mobileMiddleRow reverseColumn"
      >
        <div
          class="middleArticle"
        >
          <div
            class="base rightMiddleArticle"
            id="3"
          >
            <div
              class="category"
            >
              Product
            </div>
            <div>
              <a
                class="base left dark title"
                data-test-ref="3_TITLE"
                href="https://www.aesop.com/au/r/careers"
                target="_self"
                title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
              >
                <h1>
                  <span>
                    3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante.
                  </span>
                </h1>
              </a>
            </div>
            <div
              class="note"
            >
              <span>
                15 minute read
              </span>
            </div>
            <a
              class="base left dark image nonMobile"
              data-test-ref="3_NON_MOBILE_THUMBNAIL"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
            >
              <div>
                <picture
                  class="base picture dark image"
                >
                  <source
                    media="(min-width: 1025px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 640px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 0px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <img
                    alt="vertical_hub"
                    loading="lazy"
                  />
                </picture>
              </div>
            </a>
            <a
              class="base left dark image mobile"
              data-test-ref="3_MOBILE_THUMBNAIL"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
            >
              <div>
                <picture
                  class="base picture dark image"
                >
                  <source
                    media="(min-width: 1025px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 640px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 0px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <img
                    alt="vertical_hub"
                    loading="lazy"
                  />
                </picture>
              </div>
            </a>
          </div>
        </div>
        <div
          class="middleArticle"
        >
          <div
            class="base leftMiddleArticle"
            id="2"
          >
            <div
              class="category"
            >
              Culture
            </div>
            <div>
              <a
                class="base left dark title"
                data-test-ref="2_TITLE"
                href="https://www.aesop.com/au/r/careers"
                target="_self"
                title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
              >
                <h1>
                  <span>
                    2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
                  </span>
                </h1>
              </a>
            </div>
            <div
              class="note"
            >
              <span>
                15 minute read
              </span>
            </div>
            <a
              class="base left dark image nonMobile"
              data-test-ref="2_NON_MOBILE_THUMBNAIL"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <div>
                <picture
                  class="base picture dark image"
                >
                  <source
                    media="(min-width: 1025px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 640px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 0px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <img
                    alt="vertical_hub"
                    loading="lazy"
                  />
                </picture>
              </div>
            </a>
            <a
              class="base left dark image mobile"
              data-test-ref="2_MOBILE_THUMBNAIL"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <div>
                <picture
                  class="base picture dark image"
                >
                  <source
                    media="(min-width: 1025px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 640px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 0px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <img
                    alt="vertical_hub"
                    loading="lazy"
                  />
                </picture>
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        class="base"
        id="1"
      >
        <div
          class="category"
        >
          Aesop Spotify
        </div>
        <div>
          <a
            class="base left dark title"
            data-test-ref="1_TITLE"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <h1>
              <span>
                1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
              </span>
            </h1>
          </a>
        </div>
        <div
          class="note"
        >
          <span>
            15 minute read
          </span>
        </div>
        <a
          class="base left dark image nonMobile"
          data-test-ref="1_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers"
          target="_self"
          title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div>
            <picture
              class="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
                loading="lazy"
              />
            </picture>
          </div>
        </a>
        <a
          class="base left dark image mobile"
          data-test-ref="1_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers"
          target="_self"
          title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div>
            <picture
              class="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
                loading="lazy"
              />
            </picture>
          </div>
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ContentHubArticleList /> should render base component correctly with pattern 1 1`] = `
<div>
  <section>
    <div
      class="base"
    >
      <div
        class="top-left-1 article"
      >
        <div
          class="base fadeEnter fadeEnterActive"
          id="3"
        >
          <div
            class="category"
          >
            Product
          </div>
          <div>
            <a
              class="base left dark title"
              data-test-ref="3_TITLE"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
            >
              <h1>
                <span>
                  3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante.
                </span>
              </h1>
            </a>
          </div>
          <div
            class="note"
          >
            <span>
              15 minute read
            </span>
          </div>
          <a
            class="base left dark image nonMobile"
            data-test-ref="3_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
          <a
            class="base left dark image mobile"
            data-test-ref="3_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
      <div
        class="top-right-1 article"
      >
        <div
          class="base fadeEnter fadeEnterActive"
          id="4"
        >
          <div
            class="category"
          >
            Product
          </div>
          <div>
            <a
              class="base left dark title"
              data-test-ref="4_TITLE"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="4. Senorial consectetur adipiscing elit."
            >
              <h1>
                <span>
                  4. Senorial consectetur adipiscing elit.
                </span>
              </h1>
            </a>
          </div>
          <div
            class="note"
          >
            <span>
              15 minute read
            </span>
          </div>
          <a
            class="base left dark image nonMobile"
            data-test-ref="4_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="4. Senorial consectetur adipiscing elit."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <img
                  alt="horizontal_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
          <a
            class="base left dark image mobile"
            data-test-ref="4_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="4. Senorial consectetur adipiscing elit."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <img
                  alt="horizontal_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
      <div
        class="bottom-left-1 article"
      >
        <div
          class="base fadeEnter fadeEnterActive"
          id="1"
        >
          <div
            class="category"
          >
            Aesop Spotify
          </div>
          <div>
            <a
              class="base left dark title"
              data-test-ref="1_TITLE"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <h1>
                <span>
                  1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
                </span>
              </h1>
            </a>
          </div>
          <div
            class="note"
          >
            <span>
              15 minute read
            </span>
          </div>
          <a
            class="base left dark image nonMobile"
            data-test-ref="1_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <img
                  alt="horizontal_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
          <a
            class="base left dark image mobile"
            data-test-ref="1_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
                />
                <img
                  alt="horizontal_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
      <div
        class="bottom-right-1 article"
      >
        <div
          class="base fadeEnter fadeEnterActive"
          id="2"
        >
          <div
            class="category"
          >
            Culture
          </div>
          <div>
            <a
              class="base left dark title"
              data-test-ref="2_TITLE"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <h1>
                <span>
                  2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
                </span>
              </h1>
            </a>
          </div>
          <div
            class="note"
          >
            <span>
              15 minute read
            </span>
          </div>
          <a
            class="base left dark image nonMobile"
            data-test-ref="2_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
          <a
            class="base left dark image mobile"
            data-test-ref="2_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div>
              <picture
                class="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                  loading="lazy"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      class="mobile"
    >
      <div
        class="mobileMiddleRow"
      >
        <div
          class="middleArticle"
        >
          <div
            class="base leftMiddleArticle fadeEnter fadeEnterActive"
            id="4"
          >
            <div
              class="category"
            >
              Product
            </div>
            <div>
              <a
                class="base left dark title"
                data-test-ref="4_TITLE"
                href="https://www.aesop.com/au/r/careers"
                target="_self"
                title="4. Senorial consectetur adipiscing elit."
              >
                <h1>
                  <span>
                    4. Senorial consectetur adipiscing elit.
                  </span>
                </h1>
              </a>
            </div>
            <div
              class="note"
            >
              <span>
                15 minute read
              </span>
            </div>
            <a
              class="base left dark image nonMobile"
              data-test-ref="4_NON_MOBILE_THUMBNAIL"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="4. Senorial consectetur adipiscing elit."
            >
              <div>
                <picture
                  class="base picture dark image"
                >
                  <source
                    media="(min-width: 1025px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 640px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 0px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <img
                    alt="vertical_hub"
                    loading="lazy"
                  />
                </picture>
              </div>
            </a>
            <a
              class="base left dark image mobile"
              data-test-ref="4_MOBILE_THUMBNAIL"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="4. Senorial consectetur adipiscing elit."
            >
              <div>
                <picture
                  class="base picture dark image"
                >
                  <source
                    media="(min-width: 1025px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 640px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 0px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <img
                    alt="vertical_hub"
                    loading="lazy"
                  />
                </picture>
              </div>
            </a>
          </div>
        </div>
        <div
          class="middleArticle"
        />
      </div>
      <div
        class="base fadeEnter fadeEnterActive"
        id="3"
      >
        <div
          class="category"
        >
          Product
        </div>
        <div>
          <a
            class="base left dark title"
            data-test-ref="3_TITLE"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <h1>
              <span>
                3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante.
              </span>
            </h1>
          </a>
        </div>
        <div
          class="note"
        >
          <span>
            15 minute read
          </span>
        </div>
        <a
          class="base left dark image nonMobile"
          data-test-ref="3_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers"
          target="_self"
          title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
        >
          <div>
            <picture
              class="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
                loading="lazy"
              />
            </picture>
          </div>
        </a>
        <a
          class="base left dark image mobile"
          data-test-ref="3_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers"
          target="_self"
          title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
        >
          <div>
            <picture
              class="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
                loading="lazy"
              />
            </picture>
          </div>
        </a>
      </div>
      <div
        class="base fadeEnter fadeEnterActive"
        id="2"
      >
        <div
          class="category"
        >
          Culture
        </div>
        <div>
          <a
            class="base left dark title"
            data-test-ref="2_TITLE"
            href="https://www.aesop.com/au/r/careers"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <h1>
              <span>
                2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
              </span>
            </h1>
          </a>
        </div>
        <div
          class="note"
        >
          <span>
            15 minute read
          </span>
        </div>
        <a
          class="base left dark image nonMobile"
          data-test-ref="2_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers"
          target="_self"
          title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div>
            <picture
              class="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
                loading="lazy"
              />
            </picture>
          </div>
        </a>
        <a
          class="base left dark image mobile"
          data-test-ref="2_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers"
          target="_self"
          title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div>
            <picture
              class="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcset="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
                loading="lazy"
              />
            </picture>
          </div>
        </a>
      </div>
      <div
        class="mobileMiddleRow"
      >
        <div
          class="middleArticle"
        />
        <div
          class="middleArticle"
        >
          <div
            class="base rightMiddleArticle fadeEnter fadeEnterActive"
            id="1"
          >
            <div
              class="category"
            >
              Aesop Spotify
            </div>
            <div>
              <a
                class="base left dark title"
                data-test-ref="1_TITLE"
                href="https://www.aesop.com/au/r/careers"
                target="_self"
                title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
              >
                <h1>
                  <span>
                    1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
                  </span>
                </h1>
              </a>
            </div>
            <div
              class="note"
            >
              <span>
                15 minute read
              </span>
            </div>
            <a
              class="base left dark image nonMobile"
              data-test-ref="1_NON_MOBILE_THUMBNAIL"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <div>
                <picture
                  class="base picture dark image"
                >
                  <source
                    media="(min-width: 1025px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 640px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 0px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <img
                    alt="vertical_hub"
                    loading="lazy"
                  />
                </picture>
              </div>
            </a>
            <a
              class="base left dark image mobile"
              data-test-ref="1_MOBILE_THUMBNAIL"
              href="https://www.aesop.com/au/r/careers"
              target="_self"
              title="1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <div>
                <picture
                  class="base picture dark image"
                >
                  <source
                    media="(min-width: 1025px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 640px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <source
                    media="(min-width: 0px)"
                    srcset="./assets/images/ContentHubArticle/vertical_hub.jpg"
                  />
                  <img
                    alt="vertical_hub"
                    loading="lazy"
                  />
                </picture>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
